# p6-ds

./: explo.ipynb  pyproject.toml  requirements.txt  tools.py
notebooks/: data_preprocessing.ipynb  fcp_NLP.py  fct_clustering.py  feature_extraction.ipynb  test.py.ipynb  text-processing.ipynb
outputs/data/: _len_description_outliers.csv  data_clean.csv  data_clean_20240114.csv  data_clean_20240115.csv  results.csv  results.json
src/: main.py
src/pipelines/: data_preprocessing.py  eda.py  explore.py  extract.py  feature_extraction.py  model.py  preprocess.py  preprocessing.py
src/pipelines/natural_language/: embedding.py  evaluation.py  integrator.py  preprocessor.py  transformer.py
src/utils/: __init__.py  embconf.py  embeding.py  envconf.py  logconf.py  word2vec_model
