[tool.poetry]
name = "p6-ds"
version = "0.1.0"
description = ""
authors = ["Alhassane <alhassanne.ahmed@servier.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
seaborn = "^0.13.0"
pandas = "^2.1.4"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
nltk = "^3.8.1"
unidecode = "^1.3.7"
setuptools = "^69.0.2"
wheel = "^0.42.0"
spacy = {extras = ["apple"], version = "^3.7.2"}
researchpy = "^0.3.5"
missingno = "^0.5.2"
wordcloud = "^1.9.3"
statsmodels = "^0.14.1"
gensim = "^4.3.2"
transformers = "^4.36.1"
jupyter = "^1.0.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
p6-ds = "src.main:main"


